2006-06-08  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/custom/custom_widget/custom_gtkrc:
	* examples/book/custom/custom_widget/mywidget.cc:
	* examples/book/custom/custom_widget/mywidget.h: Make the RC file stuff 
	work - the secret is that the style value is only available when the 
	widget has been realized. However, this only works at the moment when 
	hacking glibmm to change the gtkmm_ prefix to Gtkmm_, due to bug #343012.
	* gtk/src/notebook.ccg: set_window_creation_hook(): Adapt to the changed GTK+ C 
	API, supplying the destroy notification.
	* gtk/src/printoperation.hg: Removed set_show_dialog(), set_pdf_target(), 
	set_track_print_status(), run_async().
	Added set_export_filename(), set_track_print_status(), 
	set_show_progress(), set_allow_async(), set_custom_tab_label().
	This is to match the C API.
	* pango/src/font.ccg:
	* pango/src/font.hg: Added describe_with_absolute_size(), get_font_map(). 
	* pango/src/fontdescription.hg: Added set_absolute_size(), get_size_is_absolute().
	* pango/src/layout.hg: Added get_font_description(), index_to_line_x(). 
	* tools/m4/convert_pango.m4: Added necessary conversion.

2006-06-07  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_enums.defs: Updated with enumpl.
	* gtk/src/gtk_methods.defs: Updated with h2defs.pyt
	* gtk/src/notebook.ccg:
	* gtk/src/notebook.hg: Added set_group_id(), get_group_id(), 
	get_tab_reorderable(), set_tab_reorderable(), 
	get_tab_detachable(), set_tab_detachable().
	* gtk/src/printcontext.hg: Added set_cairo_context().
	* gtk/src/printoperation.hg: run(): Added PrintOperationAction 
	parameter.
	* tools/m4/convert_gtk.m4: Added necessary conversion.

2.9.4:

2006-06-06  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.defs: Updated with h2defs.py.

2006-06-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/printcontext.hg: get_cairo() renamed to get_cairo_context(), 
	get_fontmap() renamed to get_pango_fontmap(), 