@@ -63,6 +63,12 @@ public:
   _WRAP_METHOD(Glib::RefPtr<Visual> get_rgb_visual(), gdk_screen_get_rgb_visual, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Visual> get_rgb_visual() const, gdk_screen_get_rgb_visual, refreturn, constversion)
 
+  _WRAP_METHOD(Glib::RefPtr<Colormap> get_rgba_colormap(), gdk_screen_get_rgba_colormap, refreturn)
+  _WRAP_METHOD(Glib::RefPtr<const Colormap> get_rgba_colormap() const, gdk_screen_get_rgba_colormap, refreturn, constversion)
+
+  _WRAP_METHOD(Glib::RefPtr<Visual> get_rgba_visual(), gdk_screen_get_rgba_visual, refreturn)
+  _WRAP_METHOD(Glib::RefPtr<const Visual> get_rgba_visual() const, gdk_screen_get_rgba_visual, refreturn, constversion)
+
   _WRAP_METHOD(Glib::RefPtr<Window> get_root_window(), gdk_screen_get_root_window, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Window> get_root_window() const, gdk_screen_get_root_window, refreturn, constversion)
 
