@@ -22,6 +22,7 @@
  */
 
 #include <pango/pangocairo.h>
+#include <pango/pango-types.h> //For PANGO_MATRIX_INIT
 
 namespace Pango
 {
@@ -64,6 +65,18 @@ ListHandle_Item Context::itemize(const Glib::ustring& text, int start_index, int
 void Context::update_from_cairo_context(const Cairo::RefPtr<Cairo::Context>& context)
 {
   pango_cairo_update_context(context->cobj(), gobj());
+}
+
+Matrix Context::get_matrix() const
+{
+  const PangoMatrix* matrix = pango_context_get_matrix(const_cast<PangoContext*>(gobj()));
+  if(matrix)
+    return *matrix;
+  else
+  {
+    PangoMatrix identity_transform = PANGO_MATRIX_INIT;
+    return identity_transform;
+  }
 }
 
 } /* namespace Pango */
