@@ -106,8 +106,10 @@ public:
   _WRAP_METHOD(void set_base_dir(Direction direction), pango_context_set_base_dir)
   _WRAP_METHOD(Direction get_base_dir() const, pango_context_get_base_dir)
 
-  _WRAP_METHOD(void set_matrix(const Matrix& matrix), pango_context_set_matrix )
-  //TODO: _WRAP_METHOD(Matrix get_matrix() const, pango_context_get_matrix)
+  _WRAP_METHOD(void set_matrix(const Matrix& matrix), pango_context_set_matrix)
+
+  Matrix get_matrix() const;
+  _IGNORE(pango_context_get_matrix)
 
   /** Breaks a piece of text into segments with consistent directional level and shaping engine.
    * Each byte of @a text will be contained in exactly one of the items in the returned list.
