@@ -21,8 +21,21 @@
  */
 
 #include <pango/pango-renderer.h>
+#include <pango/pango-types.h> //For PANGO_MATRIX_INIT
 
 namespace Pango
 {
+
+Matrix Renderer::get_matrix() const
+{
+  const PangoMatrix* matrix = pango_renderer_get_matrix(const_cast<PangoRenderer*>(gobj()));
+  if(matrix)
+    return *matrix;
+  else
+  {
+    PangoMatrix identity_transform = PANGO_MATRIX_INIT;
+    return identity_transform;
+  }
+}
 
 } /* namespace Pango */
