@@ -25,7 +25,6 @@
 #include <pangomm/glyphstring.h>
 #include <pangomm/layout.h>
 #include <pangomm/layoutline.h>
-#include <pangomm/types.h> //For Matrix.
 
 _DEFS(pangomm,pango)
 _PINCLUDE(glibmm/private/object_p.h)
@@ -66,9 +65,8 @@ public:
   _WRAP_METHOD(Color get_color(RenderPart part) const, pango_renderer_get_color)
 
   _WRAP_METHOD(void set_matrix(const Matrix& matrix), pango_renderer_set_matrix)
-  //TOOD: _WRAP_METHOD(Matrix get_matrix(), pango_renderer_get_matrix)
-  //Note: The returned matrix is owned by Pango and must not be modified or freed.
-
+  Matrix get_matrix() const;
+  _IGNORE(pango_renderer_get_matrix)
 };
 
 } /* namespace Pango */
