@@ -1,3 +1,11 @@
+2006-06-10  Murray Cumming  <murrayc@murrayc.com>
+
+	* gdk/src/screen.hg: Added get_rgba_visual(), get_rgba_colormap().
+	* pango/src/context.ccg:
+	* pango/src/context.hg: Added get_matrix().
+	* pango/src/renderer.ccg:
+	* pango/src/renderer.hg: Added get_matrix().
+
 2006-06-08  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/custom/custom_widget/custom_gtkrc:
